Error or exception messages loading from web config, label not wrapped fixed

--- a/Epi Info Web Survey/Epi.Web/Content/css/epistyle.css
+++ b/Epi Info Web Survey/Epi.Web/Content/css/epistyle.css
@@ -354,7 +354,7 @@ behavior: url('../Scripts/PIE.htc');
 	color: #000;   
 	font-family: "Segoe UI", Tahoma, Geneva, Verdana, AriaL, sans-serif;  
 	font-size: 10pt;  
-	white-space: pre;
+	/*white-space: pre;*/
 }
  textarea
  {
